[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/textures/aseprite/portal_arrow.ase" type="SpriteFrames" id=1]
[ext_resource path="res://Scenes/Levels/LevelTools/LevelPortal.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="LevelPortal" type="Area2D"]
position = Vector2( 592, 560 )
script = ExtResource( 2 )
PortalToScene = "res://Scenes/Levels/StartingLevel.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -16, 0 )
frames = ExtResource( 1 )
frame = 18
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="body_entered" from="." to="." method="_on_LevelPortal_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_LevelPortal_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
